# maki

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  install.sh  justfile
.github/workflows/: release.yml  rust.yml
maki-agent/: Cargo.toml
maki-agent/src/: agent.rs  cancel.rs  client.rs  command.rs  lib.rs  model.rs  permissions.rs  pricing.rs  prompt.rs  provider.rs  skill.rs  task_set.rs  tool.rs  types.rs
maki-code-index/: Cargo.toml
maki-code-index/src/: bash.rs  c.rs  common.rs  cpp.rs  csharp.rs  go.rs  java.rs  kotlin.rs  lib.rs  lua.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  tests.rs  typescript.rs
maki-config/src/: lib.rs
maki-docgen/src/: gen_providers.rs  gen_tools.rs
maki-interpreter/: Cargo.toml
maki-lua/: Cargo.toml
maki-lua/src/: language.rs  lib.rs  loader.rs  runtime.rs
maki-lua/tests/: index_equivalence.rs  index_spec.rs  spec.rs
maki-providers/: Cargo.toml
maki-providers/src/: error.rs  lib.rs  model.rs  provider.rs  retry.rs  tier_map.rs  types.rs
maki-providers/src/providers/: anthropic.rs  deepseek.rs  dynamic.rs  mod.rs  ollama.rs  openai.rs  openai_auth.rs  zai.rs
maki-providers/src/providers/anthropic/: auth.rs  mod.rs
maki-storage/src/: auth.rs  input_history.rs  lib.rs  paths.rs  sessions.rs
maki-tool-macro/src/: lib.rs
maki-ui/: Cargo.toml
maki-ui/src/: app.rs  chat.rs  dracula.tmTheme  event_loop.rs  highlight.rs  lib.rs  markdown.rs  mock.rs  (+5 more)
scripts/: tbench_maki_agent.py  tool_token_analysis.py
site/: build.sh  index.html
src/: acp.rs  main.rs  print.rs  setup.rs
(+127 files in other folders)
