[package]
name = "maki-providers"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
strum = { workspace = true }
smol = { workspace = true }
flume = { workspace = true }
futures-lite = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
